# OrbitalSimulation

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
src/: main.cpp
src/GUI/: Scene.cpp  Scene.h  gui.cpp  gui.h
src/Graphics/: renderer.cpp  renderer.h  shader.cpp  shader.h  sphere.cpp  sphere.h
src/Graphics/bodies/: cubeSphere.cpp  cubeSphere.h  sphere.cpp  sphere.h
src/Graphics/core/: Object3D.h  ObjectVisitor.h  RenderVisitor.cpp  RenderVisitor.h  Scene.h  SceneObject.h
src/Graphics/lighting/: Light.cpp  Light.h
src/Graphics/shaders/: cubeSphere.frag  cubeSphere.vert  grid.frag  grid.vert  sphere.frag  sphere.vert
src/core/: fps_counter.cpp  fps_counter.h  window.cpp  window.h
